--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/javascript.js"></script>
+    <link rel="stylesheet" href="/css/stylesheet.css">
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/javascript.js"></script>
 </head>
 <body>
     <header class="pageTop">
