Edit JS/CSS linking in index.html

--- a/index.html
+++ b/index.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Aleksandr Vorontsov</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
-    <link rel="stylesheet" href="/css/stylesheet.css">
-    <script src="/js/jquery-3.2.1.min.js"></script>
-    <script src="/js/javascript.js"></script>
-</head>
-<body>
-    <header class="pageTop">
-        <h1 class="headerName">Aleksandr Vorontsov</h1>
-        <aside class="headerMisc">Aspiring Web and Software Developer</aside>
-        <nav class="navigation">
-            <ul class="menu">
-                <li>
-                    <a class="navLink" href="#about" id="aboutLink">
-                        <span>
-                            About
-                        </span>
-                    </a>
-                </li>
-                <li>
-                    <a class="navLink" href="#contact" id="contactLink">
-                        <span>
-                            Contact
-                        </span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <div class="mainBody">
-        <h2 class="bodyTitle scrollTop" id="about">About</h2>
-        <div class="bodyText">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-            </p>
+    <head>
+        <meta charset="UTF-8">
+        <title>Aleksandr Vorontsov</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+        <link rel="stylesheet" href="css/stylesheet.css">
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="js/javascript.js"></script>
+    </head>
+    <body>
+        <header class="pageTop">
+            <h1 class="headerName">Aleksandr Vorontsov</h1>
+            <aside class="headerMisc">Aspiring Web and Software Developer</aside>
+            <nav class="navigation">
+                <ul class="menu">
+                    <li>
+                        <a class="navLink" href="#about" id="aboutLink">
+                            <span>
+                                About
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="navLink" href="#contact" id="contactLink">
+                            <span>
+                                Contact
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="mainBody">
+            <h2 class="bodyTitle scrollTop" id="about">About</h2>
+            <div class="bodyText">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
+                </p>
+            </div>
+            <h2 class="miscTitle scrollTop" id="contact">Contact</h2>
+            <div class="miscText">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
+                </p>
+            </div>
         </div>
-        <h2 class="miscTitle scrollTop" id="contact">Contact</h2>
-        <div class="miscText">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-            </p>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
