Add styled scroll-to-top arrow, Add scroll-to-top script, Edit text alignment.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Aleksandr Vorontsov</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link rel="stylesheet" href="css/stylesheet.css">
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png">
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/javascript.js"></script>
     </head>
@@ -35,7 +37,10 @@
             </nav>
         </header>
         <div class="mainBody">
-            <h2 class="bodyTitle scrollTop" id="about">About</h2>
+            <div class="bodyHeader" id="bodyHeader">
+                <h2 class="bodyTitle scrollTop" id="about">About</h2>
+                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+            </div>
             <div class="bodyText">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
@@ -50,7 +55,10 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
                 </p>
             </div>
-            <h2 class="miscTitle scrollTop" id="contact">Contact</h2>
+            <div class="bodyHeader" id="miscHeader">
+                <h2 class="bodyTitle scrollTop" id="contact">Contact</h2>
+                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+            </div>
             <div class="miscText">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
