Add footer and styling, Edit main body and nav links

--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
                         </a>
                     </li>
                     <li>
+                        <a class="navLink" href="#skills" id="skillsLink">
+                            <span>
+                                Skills
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="navLink" href="#projects" id="projectsLink">
+                            <span>
+                                Projects
+                            </span>
+                        </a>
+                    </li>
+                    <li>
                         <a class="navLink" href="#contact" id="contactLink">
                             <span>
                                 Contact
@@ -45,12 +59,21 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
                 </p>
+            </div>
+            <div class="bodyHeader" id="skillsHeader">
+                <h2 class="bodyTitle scrollTop" id="skills">Skills</h2>
+                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+            </div>
+            <div class="bodyText" id="skillsText">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
                 </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-                </p>
+            </div>
+            <div class="bodyHeader" id="projectsHeader">
+                <h2 class="bodyTitle scrollTop" id="projects">Projects</h2>
+                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+            </div>
+            <div class="bodyText" id="projectsText">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
                 </p>
@@ -65,5 +88,10 @@
                 </p>
             </div>
         </div>
+        <footer>
+            <span class="footerText">
+                Designed and Developed by Aleksandr Vorontsov
+            </span>
+        </footer>
     </body>
 </html>
