--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Aleksandr Vorontsov, London, UK">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 800|Roboto:300" rel="stylesheet">
         <link rel="stylesheet" href="css/stylesheet.css">
         <link rel="shortcut icon" type="image/png" href="images/favicon.png">
         <script src="js/jquery-3.2.1.min.js"></script>
