Add skills/projects/contact content, Add projects cards

--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
             <aside class="headerMisc">Aspiring Web and Software Developer</aside>
             <nav class="navigation">
                 <ul class="menu">
-                    <li>
+                    <li class="menuItem">
                         <a class="navLink" href="#about" id="aboutLink">
                             <span>
                                 About
                             </span>
                         </a>
                     </li>
-                    <li>
+                    <li class="menuItem">
                         <a class="navLink" href="#skills" id="skillsLink">
                             <span>
                                 Skills
                             </span>
                         </a>
                     </li>
-                    <li>
+                    <li class="menuItem">
                         <a class="navLink" href="#projects" id="projectsLink">
                             <span>
                                 Projects
                             </span>
                         </a>
                     </li>
-                    <li>
+                    <li class="menuItem">
                         <a class="navLink" href="#contact" id="contactLink">
                             <span>
                                 Contact
@@ -64,27 +64,76 @@
                 <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
             </div>
             <div class="bodyText" id="skillsText">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-                </p>
+                <div class="skills">
+                    <ul class="skillsList">
+                        <li class="skillsItem">HTML5 + CSS3</li>
+                        <li class="skillsItem">JavaScript</li>
+                        <li class="skillsItem">C#</li>
+                        <li class="skillsItem">Python</li>
+                        <li class="skillsItem">AngularJS</li>
+                        <li class="skillsItem">Git</li>
+                        <li class="skillsItem">JetBrains IDEs</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <ul class="skillsList">
+                        <li class="skillsItem"><b>Experienced</b></li>
+                        <li class="skillsItem"><b>Moderate</b></li>
+                        <li class="skillsItem"><b>Experienced</b></li>
+                        <li class="skillsItem"><b>Experienced</b></li>
+                        <li class="skillsItem"><b>Beginner</b></li>
+                        <li class="skillsItem"><b>Experienced</b></li>
+                        <li class="skillsItem"><b>Experienced</b></li>
+                    </ul>
+                </div>
             </div>
             <div class="bodyHeader" id="projectsHeader">
                 <h2 class="bodyTitle scrollTop" id="projects">Projects</h2>
                 <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
             </div>
-            <div class="bodyText" id="projectsText">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-                </p>
+            <div class="bodyText" id="projectsList">
+                <div class="projectsItem">
+                    <a class="webLink" href="https://github.com/a-vorontsov/Particle">
+                        <h2 class="projectHeader">
+                            Particle
+                        </h2>
+                    </a>
+                    <p class="projectBody">
+                        Particle is a 2D platformer game created in Unity and scripted in C#. It was made as part of the BAFTA YGD 2017 competition
+                    </p>
+                </div>
+                <div class="projectsItem">
+                    <a class="webLink" href="https://github.com/kz/Beacon">
+                        <h2 class="projectHeader">
+                            Beacon
+                        </h2>
+                    </a>
+                    <p class="projectBody">
+                        Winning the first place prize at the Qredo Hackathon, Beacon is an app which lets parents track the locations of their children and view their children’s SMS messages.                    </p>
+                </div>
+                <div class="projectsItem">
+                    <a class="webLink" href="https://github.com/kz/flook">
+                        <h2 class="projectHeader">
+                            Flook
+                        </h2>
+                    </a>
+                    <p class="projectBody">
+                        Flook is a search engine for 3D files which allows the user to interact with the 3D model inside the browser. This was developed during HackGenY London 2015 and won the Autodesk prize and third place prize.                </div>
             </div>
             <div class="bodyHeader" id="miscHeader">
                 <h2 class="bodyTitle scrollTop" id="contact">Contact</h2>
                 <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
             </div>
             <div class="miscText">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
-                </p>
+                <ul class="contactList">
+                    <li class="contactItem">
+                        Email:
+                        <a class="webLink" href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a>
+                    </li>
+                    <li class="contactItem">
+                        <a class="webLink" href="https://github.com/a-vorontsov/">GitHub</a>
+                    </li>
+                </ul>
             </div>
         </div>
         <footer>
