Add "About" content, add CV

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <link rel="shortcut icon" type="image/png" href="images/favicon.png">
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/javascript.js"></script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-101741070-1', 'auto');
+            ga('send', 'pageview');
+        </script>
     </head>
     <body>
         <header class="pageTop">
@@ -56,7 +64,13 @@
             </div>
             <div class="bodyText">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis iaculis convallis rhoncus. Vestibulum a enim gravida, volutpat lacus nec, consectetur dui. Etiam non nisl sed mauris elementum tempus. Nullam ac ornare dolor, eu ullamcorper odio. Vestibulum vel vehicula nulla, eget consequat lacus. Nam sollicitudin lacus non ex consectetur sagittis. Etiam fringilla neque viverra magna scelerisque, et molestie odio egestas. Quisque vitae tempus arcu, ac rutrum lacus. Praesent fringilla sem ut libero condimentum tempor. Donec accumsan mattis orci eu congue. Praesent a mattis elit. Vivamus leo sem, eleifend ut efficitur nec, gravida venenatis magna.
+                    Hello, I'm a web and software developer and student in London, UK.
+                </p>
+                <p>
+                    I am highly interested in <b>UX/UI</b> as part of the front-end user interaction of web and software development. And I attend hackathons as a casual interest and to develop common web development skills.
+                </p>
+                <p>
+                    If you're a recruiter or want to see more information, have a look at my <a class="webLink" href="Aleksandr%20Vorontsov%20-%20Resume.pdf"><b>CV.</b></a>
                 </p>
             </div>
             <div class="bodyHeader" id="skillsHeader">
@@ -109,7 +123,8 @@
                         </h2>
                     </a>
                     <p class="projectBody">
-                        Winning the first place prize at the Qredo Hackathon, Beacon is an app which lets parents track the locations of their children and view their children’s SMS messages.                    </p>
+                        Winning the first place prize at the Qredo Hackathon, Beacon is an app which lets parents track the locations of their children and view their children’s SMS messages.
+                    </p>
                 </div>
                 <div class="projectsItem">
                     <a class="webLink" href="https://github.com/kz/flook">
@@ -118,7 +133,9 @@
                         </h2>
                     </a>
                     <p class="projectBody">
-                        Flook is a search engine for 3D files which allows the user to interact with the 3D model inside the browser. This was developed during HackGenY London 2015 and won the Autodesk prize and third place prize.                </div>
+                        Flook is a search engine for 3D files which allows the user to interact with the 3D model inside the browser. This was developed during HackGenY London 2015 and won the Autodesk prize and third place prize.
+                    </p>
+                </div>
             </div>
             <div class="bodyHeader" id="miscHeader">
                 <h2 class="bodyTitle scrollTop" id="contact">Contact</h2>
@@ -129,6 +146,12 @@
                     <li class="contactItem">
                         Email:
                         <a class="webLink" href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a>
+                    </li>
+                    <li class="contactItem">
+                        <a class="webLink" href="https://www.linkedin.com/in/aleksvorontsov/">LinkedIn</a>
+                    </li>
+                    <li class="contactItem">
+                        <a class="webLink" href="https://www.facebook.com/sasha.vorontsov">FaceBook</a>
                     </li>
                     <li class="contactItem">
                         <a class="webLink" href="https://github.com/a-vorontsov/">GitHub</a>
