Edit "about" content

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     Hello, I'm a web and software developer and student in London, UK.
                 </p>
                 <p>
-                    I am highly interested in <b>UX/UI</b> as part of the front-end user interaction of web and software development. And I attend hackathons as a casual interest and to develop common web development skills.
+                    I am highly interested in <b>UX/UI</b> as part of the front-end user interaction of web and software development. Also, I attend hackathons as a casual interest and to develop common web development skills.
                 </p>
                 <p>
                     If you're a recruiter or want to see more information, have a look at my <a class="webLink" href="Aleksandr%20Vorontsov%20-%20Resume.pdf"><b>CV.</b></a>
