--- a/index.html
+++ b/index.html
@@ -144,14 +144,13 @@
             <div class="miscText">
                 <ul class="contactList">
                     <li class="contactItem">
-                        Email:
                         <a class="webLink" href="mailto:hello@vorontsov.co.uk">hello@vorontsov.co.uk</a>
                     </li>
                     <li class="contactItem">
                         <a class="webLink" href="https://www.linkedin.com/in/aleksvorontsov/">LinkedIn</a>
                     </li>
                     <li class="contactItem">
-                        <a class="webLink" href="https://www.facebook.com/sasha.vorontsov">FaceBook</a>
+                        <a class="webLink" href="https://www.facebook.com/sasha.vorontsov">Facebook</a>
                     </li>
                     <li class="contactItem">
                         <a class="webLink" href="https://github.com/a-vorontsov/">GitHub</a>
