Add additional project

--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
                     </p>
                 </div>
                 <div class="projectsItem">
+                    <a class="webLink" href="https://github.com/a-vorontsov/GoLink">
+                        <h2 class="projectHeader">
+                            GoLink
+                        </h2>
+                    </a>
+                    <p class="projectBody">
+                        GoLink is a proximity based messaging service. It is built using an AngularJS front-end connected to a Firebase cloud database.</p>
+                </div>
+                <div class="projectsItem">
                     <a class="webLink" href="https://github.com/kz/Beacon">
                         <h2 class="projectHeader">
                             Beacon
