--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
                         </a>
                     </li>
                     <li class="menuItem">
+                        <a class="navLink" href="#work" id="WorkLink">
+                            <span>
+                                Work
+                            </span>
+                        </a>
+                    </li>
+                    <li class="menuItem">
                         <a class="navLink" href="#projects" id="projectsLink">
                             <span>
                                 Projects
@@ -98,6 +105,21 @@
                         <li class="skillsItem"><b>Beginner</b></li>
                         <li class="skillsItem"><b>Experienced</b></li>
                         <li class="skillsItem"><b>Experienced</b></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bodyHeader" id="workHeader">
+                <h2 class="bodyTitle scrollTop" id="work">Work</h2>
+                <i class="material-icons scrollTop upArrow">keyboard_arrow_up</i>
+            </div>
+            <div class="bodyText" id="workText">
+                <div class="work">
+                    <ul class="workList">
+                        <li class="workItem">
+                            <a href="https://endorsify.co" class="webLink"><b style="font-size: 22px;">Endorsify</b></a> - Software Engineer Intern
+                            <aside class="workMisc">(July 2017 - Present)</aside>
+                            <aside class="workMisc">Assisted in the front-end development of the website and product</aside>
+                        </li>
                     </ul>
                 </div>
             </div>
