--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                     <ul class="workList">
                         <li class="workItem">
                             <a href="https://endorsify.co" class="webLink"><b style="font-size: 22px;">Endorsify</b></a> - Software Engineer Intern
-                            <aside class="workMisc">(July 2017 - Present)</aside>
-                            <aside class="workMisc">Assisted in the front-end development of the website and product</aside>
+                            <aside class="workMisc">(July 2017 - August 2017)</aside>
+                            <aside class="workMisc">Implemented new website designes for various platform pages</aside>
                         </li>
                     </ul>
                 </div>
