--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <li class="workItem">
                             <a href="https://endorsify.co" class="webLink"><b style="font-size: 22px;">Endorsify</b></a> - Software Engineer Intern
                             <aside class="workMisc">(July 2017 - August 2017)</aside>
-                            <aside class="workMisc">Implemented new website designes for various platform pages</aside>
+                            <aside class="workMisc">Implemented new website designs for various platform pages</aside>
                         </li>
                     </ul>
                 </div>
