--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                         <li class="skillsItem">C#</li>
                         <li class="skillsItem">Python</li>
                         <li class="skillsItem">AngularJS</li>
-                        <li class="skillsItem">PHP + Laravel</li>
+                        <li class="skillsItem">React/React Native</li>
+                        <li class="skillsItem">PHP/Laravel</li>
                         <li class="skillsItem">Git</li>
                         <li class="skillsItem">JetBrains IDEs</li>
                     </ul>
@@ -104,7 +105,8 @@
                         <li class="skillsItem"><b>Experienced</b></li>
                         <li class="skillsItem"><b>Experienced</b></li>
                         <li class="skillsItem"><b>Beginner</b></li>
-                        <li class="skillsItem"><b>Moderate</b></li>
+                        <li class="skillsItem"><b>Beginner</b></li>
+                        <li class="skillsItem"><b>Beginner</b></li>
                         <li class="skillsItem"><b>Experienced</b></li>
                         <li class="skillsItem"><b>Experienced</b></li>
                     </ul>
