Update work description

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <li class="workItem">
                             <a href="https://endorsify.co" class="webLink"><b style="font-size: 22px;">Endorsify</b></a> - Software Engineer Intern
                             <aside class="workMisc">(July 2017 - August 2017)</aside>
-                            <aside class="workMisc">Implemented new website designs for various platform pages</aside>
+                            <aside class="workMisc">Implemented new designs for various major pages connecting backend PHP with the user interface creating a more fluid user experience and page navigation.</aside>
                         </li>
                     </ul>
                 </div>
